--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,20 +5,20 @@ description = "Beauty SQL Client"
 authors = ["you"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "eyesql"
 edition = "2018"
 build = "src/build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-beta.0" }
+tauri-build = { version = "1.0.0-beta.3" }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.1", features = ["api-all"] }
+serde_json = "1.0.66"
+serde = { version = "1.0.127", features = ["derive"] }
+tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
 
 [features]
-default = [ "custom-protocol" ]
-custom-protocol = [ "tauri/custom-protocol" ]
+default = ["custom-protocol"]
+custom-protocol = ["tauri/custom-protocol"]
