--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.2.2",
+    "@types/react-select": "^4.0.17",
+    "@xstate/react": "^1.5.1",
     "@xstyled/emotion": "^3.0.2",
     "deepmerge": "^4.2.2",
     "preact": "^10.5.14",
-    "wouter-preact": "^2.7.4"
+    "react-icons": "^4.2.0",
+    "react-select": "^4.3.1",
+    "wouter-preact": "^2.7.4",
+    "xstate": "^4.23.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.0",
@@ -18,6 +23,7 @@
     "concurrently": "^6.2.1",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-svgr": "^0.4.0"
   }
 }
