--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri-build = { version = "1.0.0-beta.3" }
 serde_json = "1.0.66"
 serde = { version = "1.0.127", features = ["derive"] }
 tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
+sqlx = { version = "0.5.5", features = ["runtime-async-std-rustls"] }
 
 [features]
 default = ["custom-protocol"]
